--- a/tavern-api/appsettings.Development.json
+++ b/tavern-api/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=dev_db;Username=dev_user;Password=1234"
+  },
+  "BaseUrlConfig": {
+    "Url": "http://localhost:5113/"
+  },
+  "BaseUrlProfileImage": {
+    "Url":  "images/profiles/"
   }
 }
