--- a/tavern-api/tavern-api.csproj
+++ b/tavern-api/tavern-api.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="7.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
