--- a/tavern-api/appsettings.Development.json
+++ b/tavern-api/appsettings.Development.json
@@ -12,6 +12,9 @@
     "Url": "http://localhost:5113/"
   },
   "BaseUrlProfileImage": {
-    "Url":  "images/profiles/"
+    "Url": "images/profiles/"
+  },
+  "BaseTempUrlPath": {
+    "Value": "C:\\TempTavern"
   }
 }
