--- a/tavern-api/appsettings.json
+++ b/tavern-api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User Id=postgres.hcmniwibwzuzjgqlnkty;Password=FdjfrIXSD2nPTehX;Server=aws-1-sa-east-1.pooler.supabase.com;Port=5432;Database=postgres"
+  },
+  "BaseUrlConfig": {
+    "Url": "http://localhost:5113/"
+  },
+  "BaseUrlProfileImage": {
+    "Url": "images/profiles/"
+  },
+  "BaseTempUrlPath": {
+    "Value": "C:\\TempTavern"
+  }
 }
